package com.designpatterns.observer.observer;

/**
 * @Author: jiangjiabin
 * @Description:
 * @Date: Create in 15:04 2019/2/19
 */
public interface Observer {

    void update(float mTemperatrue, float mPressure, float mHumidity);


}
